# sample_code

./: README.md  inventory.py  sample4.py
RI_Spy/: gem_data.tsv  observations.py  ri_spy.db  ri_spy.py
fun_with_dataclasses/: dataclass_utils.py  dc_example.py  get_schemas.py
inventory_time/: common_utils.py  inventory.py  minipantry.db  show_utils.py
minipantry/: inventory.py  minipantry_test.db  minipantry_test.py
sample1/: LetterSubProgrammingChallenge.docx  letter_sub.py  letter_sub_challenge.txt  letter_sub_tests.py
sample2/: README.md  event_obj.py  replay.py  tests.py
sample2/test_data/: thermo_small.jsonl
sample3/: topic1.txt  topic3.py
wordle_solver/: README.md  pyproject.toml
wordle_solver/erins_wordle_solver/: operator_class.py  solve_wordle.py  word_match.py
wordle_solver/erins_wordle_solver/tests/: wordle_test.py
