[project]
name = "erins_wordle_solver"
version = "0.0.1"
authors = [
  { name="Erin T", email="emtavano@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["nltk"]

[project.scripts]
erin_solver = "erins_wordle_solver.solve_wordle:main"

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"


